--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
 body {
   font-family: "Space Mono";
-  background-color:#ff92e6;
-  color: #eb6420;
+  background-color:#ffffff;
+  color: #000000;
   text-align: center;
-  line-height: 115%;
   padding: 25px;
 }
 h1,h2, h3 {
@@ -15,21 +14,19 @@ h1,h2, h3 {
     "MORF" 15,
     "SHLN" 50;
 }
-li {
-  display: inline;
-}
 ul {
-  padding: 20px;
+  padding: 0px;
+  list-style: none;
 }
 a {
   text-decoration:none;
-  color:#eb6420;
+  color:#000000;
   font-size: 20px;
   font-weight:bold;
   transition:0.3s ease;
 }
 a:hover {
-  color: #ffb7ef;
+  color: #fe0ee2;
 }
 .card {
   background-color: #EEEEEE;
@@ -41,40 +38,19 @@ a:hover {
   box-shadow: 0 0 16px rgba(0,0,0,0.1);
 }
 #profile-pic {
-  width: 227px;
-  height: 291px;
-  border-radius: 10%;
-  border: 5px solid #fb5412;
-}
-#dog-pic {width: 227px;
-  height: 291px;
-  border-radius: 10%;
-  border: 5px solid #fb5412;
-}
-#nature-pic {width: 340px;
-  height: 291px;
-  border-radius: 10%;
-  border: 5px solid #fb5412;
-}
-#code-pic {width: 227px;
-  height: 291px;
-  border-radius: 10%;
-  border: 5px solid #fb5412;
-}
-@media (max-width: 960px) {
-  .container {
-    width: 700px;
-  }
-}
+  width: 200px;
+  border: 5px solid #000000;
 
-@media (max-width: 720px) {
-  .container {
-    width: 500px;
-  }
 }
-
-@media (max-width: 540px) {
-  .container {
-    width: 300px;
-  }
+#dog-pic {width: 200px;
+  height: 200px;
+  border: 5px solid #000000;
+}
+#nature-pic {width: 200px;
+  height: 200px;
+  border: 5px solid #000000;
+}
+#code-pic {width: 200px;
+  height: 200px;
+  border: 5px solid #000000;
 }
